force-app/main/default/objects/OrderH__c/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <label>Food</label>
    <referenceTo>Food__c</referenceTo>
    <relationshipLabel>OrdersH</relationshipLabel>
    <relationshipName>OrdersH</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>