force-app/main/default/objects/OrderH__c/fields/Total_Item__c.field-meta.xml
<CustomField>
    <fullName>Total_Item__c</fullName>
    <formula>Cart__r.Total_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>